--- a/hunger-app/src/index.css
+++ b/hunger-app/src/index.css
@@ -1,5 +1,11 @@
+/* button font */
+@import url("https://fonts.googleapis.com/css2?family=Rethink+Sans:ital,wght@1,700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* button font */
-/* @import url("https://fonts.googleapis.com/css2?family=Rethink+Sans:ital,wght@1,700&display=swap"); */
+
+@layer utilities {
+  .font-stretch {
+    font-stretch: ultra-expanded;
+  }
+}
