--- a/hunger-app/src/index.css
+++ b/hunger-app/src/index.css
@@ -1,5 +1,32 @@
-/* button font */
-@import url("https://fonts.googleapis.com/css2?family=Rethink+Sans:ital,wght@1,700&display=swap");
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Cousine:ital,wght@1,700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  body {
+    background-color: #ff9900;
+  }
+  /* #title {
+    overflow-wrap: break-word;
+    inline-size: 1rem;
+  } */
+  input:focus {
+    outline: none;
+  }
+  button {
+    box-shadow: -0.5rem 0.5rem 0 0 #1e1e1f;
+    letter-spacing: 0.25rem;
+  }
+
+  button:hover {
+    background: rgba(30, 30, 31, 0.1);
+  }
+
+  button:active {
+    box-shadow: none;
+    margin-top: 0.5rem;
+    margin-left: 4.5rem;
+  }
+}
