--- a/hunger-app/src/index.css
+++ b/hunger-app/src/index.css
@@ -12,6 +12,12 @@
     overflow-wrap: break-word;
     inline-size: 1rem;
   } */
+
+  input::placeholder {
+    font-size: 1rem;
+    outline: none;
+  }
+
   input:focus {
     outline: none;
   }
@@ -21,12 +27,16 @@
   }
 
   button:hover {
-    background: rgba(30, 30, 31, 0.1);
+    background: rgba(30, 30, 31, 0.3);
+    color: #302d29;
   }
 
   button:active {
+    transform: translate(-0.5rem, 0.5rem);
+    border-style: none;
+    background: rgba(30, 30, 31, 0.9);
+    color: #ffefd7;
     box-shadow: none;
-    margin-top: 0.5rem;
-    margin-left: 4.5rem;
+    margin-left: ;
   }
 }
